Upgrade to S3 compatible file storage